--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,11 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/blankFragment">
+    app:startDestination="@id/listaProdutos">
 
     <fragment
-        android:id="@+id/blankFragment"
-        android:name="br.com.alura.aluraesporte.BlankFragment"
-        android:label="fragment_blank"
-        tools:layout="@layout/fragment_blank" />
+        android:id="@+id/listaProdutos"
+        android:name="br.com.alura.aluraesporte.ui.fragment.ListaProdutosFragment"
+        android:label="listaDeProdutos"
+        tools:layout="@layout/lista_produtos"/>
+
+    <fragment
+        android:id="@+id/detalhesProduto"
+        android:label="Detalhes do produto"
+        android:name="br.com.alura.aluraesporte.ui.fragment.DetalhesProdutoFragment"
+        tools:layout="@layout/detalhes_produto"/>
 </navigation>
