--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,4 +16,10 @@
         android:label="Detalhes do produto"
         android:name="br.com.alura.aluraesporte.ui.fragment.DetalhesProdutoFragment"
         tools:layout="@layout/detalhes_produto"/>
+
+    <fragment
+        android:id="@+id/pagamento"
+        android:label="Pagamento"
+        android:name="br.com.alura.aluraesporte.ui.fragment.PagamentoFragment"
+        tools:layout="@layout/pagamento"/>
 </navigation>
