--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,17 +9,29 @@
         android:id="@+id/listaProdutos"
         android:name="br.com.alura.aluraesporte.ui.fragment.ListaProdutosFragment"
         android:label="listaDeProdutos"
-        tools:layout="@layout/lista_produtos"/>
+        tools:layout="@layout/lista_produtos">
+        <action
+            android:id="@+id/action_listaProdutos_to_detalhesProduto"
+            app:destination="@id/detalhesProduto" />
+    </fragment>
 
     <fragment
         android:id="@+id/detalhesProduto"
         android:label="Detalhes do produto"
         android:name="br.com.alura.aluraesporte.ui.fragment.DetalhesProdutoFragment"
-        tools:layout="@layout/detalhes_produto"/>
+        tools:layout="@layout/detalhes_produto">
+        <action
+            android:id="@+id/action_detalhesProduto_to_pagamento"
+            app:destination="@id/pagamento" />
+    </fragment>
 
     <fragment
         android:id="@+id/pagamento"
         android:label="Pagamento"
         android:name="br.com.alura.aluraesporte.ui.fragment.PagamentoFragment"
-        tools:layout="@layout/pagamento"/>
+        tools:layout="@layout/pagamento">
+        <action
+            android:id="@+id/action_pagamento_to_listaProdutos"
+            app:destination="@id/listaProdutos" />
+    </fragment>
 </navigation>
