--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -23,6 +23,9 @@
         <action
             android:id="@+id/action_detalhesProduto_to_pagamento"
             app:destination="@id/pagamento" />
+        <argument
+            android:name="produtoId"
+            app:argType="long" />
     </fragment>
 
     <fragment
@@ -32,6 +35,11 @@
         tools:layout="@layout/pagamento">
         <action
             android:id="@+id/action_pagamento_to_listaProdutos"
-            app:destination="@id/listaProdutos" />
+            app:destination="@id/listaProdutos"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="true" />
+        <argument
+            android:name="produtoId"
+            app:argType="long" />
     </fragment>
 </navigation>
